done
fix errors