@@ -1,26 +1,21 @@
 package com.cookBook.App.service;
 
 import com.cookBook.App.model.Post;
-
 import com.cookBook.App.model.User;
 import com.cookBook.App.repository.PostRepository;
 import com.cookBook.App.repository.UserRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
-import java.util.stream.Collectors;
-
-
 @Service
 public class PostService {
-
 
     private static final Logger logger = LoggerFactory.getLogger(PostService.class);
 
@@ -30,14 +25,13 @@ public class PostService {
     @Autowired
     private UserRepository userRepository;
 
-
+    @Transactional
     public Post createPost(Post post) {
         post.setTimestamp(LocalDateTime.now());
         return postRepository.save(post);
     }
 
     public List<Post> getAllPosts() {
-
         List<Post> posts = postRepository.findAll();
         return posts.stream().map(post -> {
             try {
@@ -47,13 +41,14 @@ public class PostService {
                     return post;
                 }
                 Optional<User> user = userRepository.findById(post.getUserId());
-                post.setUserName(user.isPresent() ? user.get().getName() : "Anonymous");
+                post.setUserName(user.map(User::getName).orElse("Anonymous"));
+                return post;
             } catch (Exception e) {
                 logger.error("Error processing post {}: {}", post.getId(), e.getMessage(), e);
                 post.setUserName("Anonymous");
+                return post;
             }
-            return post;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     public Optional<Post> getPostById(String id) {
@@ -66,29 +61,34 @@ public class PostService {
                     return;
                 }
                 Optional<User> user = userRepository.findById(p.getUserId());
-                p.setUserName(user.isPresent() ? user.get().getName() : "Anonymous");
+                p.setUserName(user.map(User::getName).orElse("Anonymous"));
             } catch (Exception e) {
                 logger.error("Error processing post {}: {}", p.getId(), e.getMessage(), e);
                 p.setUserName("Anonymous");
             }
         });
         return post;
-
-    public Post updatePost(String id, Post updatedPost) {
-        return postRepository.findById(id).map(post -> {
-            post.setTopic(updatedPost.getTopic());
-            post.setDescription(updatedPost.getDescription());
-            post.setMediaUrls(updatedPost.getMediaUrls());
-            post.setMediaTypes(updatedPost.getMediaTypes());
-            post.setPrivate(updatedPost.isPrivate());
-            post.setTaggedFriends(updatedPost.getTaggedFriends());
-            post.setLocation(updatedPost.getLocation());
-            return postRepository.save(post);
-        }).orElseThrow(() -> new RuntimeException("Post not found"));
     }
 
+    @Transactional
+    public Post updatePost(String id, Post updatedPost) {
+        return postRepository.findById(id).map(post -> {
+            if (updatedPost.getTopic() != null) post.setTopic(updatedPost.getTopic());
+            if (updatedPost.getDescription() != null) post.setDescription(updatedPost.getDescription());
+            if (updatedPost.getMediaUrls() != null) post.setMediaUrls(updatedPost.getMediaUrls());
+            if (updatedPost.getMediaTypes() != null) post.setMediaTypes(updatedPost.getMediaTypes());
+            post.setPrivate(updatedPost.isPrivate());
+            if (updatedPost.getTaggedFriends() != null) post.setTaggedFriends(updatedPost.getTaggedFriends());
+            if (updatedPost.getLocation() != null) post.setLocation(updatedPost.getLocation());
+            return postRepository.save(post);
+        }).orElseThrow(() -> new RuntimeException("Post not found with id: " + id));
+    }
+
+    @Transactional
     public void deletePost(String id) {
+        if (!postRepository.existsById(id)) {
+            throw new RuntimeException("Post not found with id: " + id);
+        }
         postRepository.deleteById(id);
-
+    }
 }
-
